--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -10,6 +10,33 @@ docs..: add all float_RArray funs, for matricies.
 
 * startup script
 
+* add param on datatable for dmem diff log file names or not
+-----------
+* move most stuff from pdpbase -> static funs on tarootbase
+
+* css always creates a root too -- unifies this code instead of having a css 
+fork and a non-css fork
+
+* one static function is the overal Main; creates root token etc
+
+* args processed into two name-value arrays: Flag-Value & decoded flag->value
+(e.g., -f -> StartupScript)
+
+* some global static path code on taMisc -- pdpdir, homedir, curdir, 
+css_include_paths, load_include_paths
+
+* taProject has base_fname -- name w/out .proj[.gz]
+
+* functions on taFBase::SaveAsProjBase(const String& ext), LoadAsProjBase, and 
+on DataTable SaveLogAsProjBase: get base_fname and add ext -- this is 
+essentially what most of the startup.css code does
+
+* SaveNetwork[Weights] program -- uses above
+
+* some helper wrapper code to find and set variables in programs upon startup.
+
+
+
 ---------
 
 current bugs:
