--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,6 +1,5 @@
 leabra todo list:
 
-
 * create MathFuns library with all kinds of math-related things in it, incl lots of #CAT
 docs..: add all float_RArray funs, for matricies.
 
@@ -11,11 +10,30 @@ docs..: add all float_RArray funs, for matricies.
 * startup script
 
 * add param on datatable for dmem diff log file names or not
+
+-----------
+Program issues
+
+* prompt is now messed up: pdp++ > >xxx and just > for program cmd shell
+* syntax error ^ doesn't show up in right place..
+* Output::R should work even though R is a defined constant variable: need
+   a more inclusive type for things after the :: scoper
+
+* register VT_xx in global css namespace..
+* sometimes method s_args don't copy, sometimes they do..
+* add "assign" Progel (result,  expr)
+* add "print" Progel?
+* add "comment" progel -- just displays a comment in display, perhaps with diff color?
+* more color highlighting in general of programs?
+* warn about = in if condition (instead of ==) -- maybe even in css?
+
 -----------
 
-* SaveNetwork[Weights] program -- uses above
 
-* some helper wrapper code to find and set variables in programs upon startup.
+
+* LeabraBatch
+
+* SaveNetwork[Weights] program -- uses above
 
 ---------
 
@@ -28,17 +46,11 @@ current bugs:
 --------
 check:
 
-* nuke float_RArray totally: fun lookup
-
 * add avg_cycles to network, monitor
-
-* trim Item Detail in progeditor if > 50 or so..
 
 
 -------
 lower pri:
-
-* add "print" Progel?
 
 * css_console.cpp: complete obj.mbr expressions..
 
