updated layer geometry to use new XYNGeom object in ta_geometry: has x, y, and n, where n = x*y unless n_not_xy flag is set, in which case n is set and it makes sure that x * y fits n.  also unit_groups flag added and gp_geom.n determines number of unit groups, not un_geom.z.  old nets will be converted to new format seamlessly.  about time..

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -3,6 +3,15 @@ leabra todo list:
 * fix Load/Save weights to write unit indicies so are totally robust.
   * new format
 
+LayerGeom : TwoDGeom {
+  bool n_not_xy;     // #DEF_false total number is less than x * y
+  int  n;	     // #CONDEDIT_n_not_xy:true total number (=x*y unless n_not_xy is set)
+}
+
+use for un_geom & gp_geom;  
+
+use bool use_gps?  ignore params if not??  or 1x1 = 1 is not using??
+
 * Network geom:
 > new:
 > un_geom (or "geom"): x, y
