my last major overhaul: fixing the overloaded functions in list/group/array -- now have explicit El, Idx, Name etc suffixes indiciating the type of arg.  All seems to work!

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,9 +1,13 @@
 leabra todo list:
 
+* look for ConnectFromCk -- always necessary?  very expensive.
 
-* scan_congroups in netdata netmonitor; check
+* scan_congroups in netdata netmonitor -- not getting sending layer geom.
+  do quick try at this
 
-* program dirty not getting set -- init not recompiling
+* fix Remove( and Find( functions to not be overloaded -- doesn't look too bad.
+
+* program dirty not getting set -- init not recompiling: brad
 
 * dataops: random patterns!
 
