--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,19 +1,18 @@
 leabra todo list:
 
+* BUTTON_MENUs for changing specs & obj types etc in Netstru objs -- select obj
+  do in its panel
+
 * look for ConnectFromCk -- always necessary?  very expensive.
+
+* replace spec* with smartptr or ref
 
 * scan_congroups in netdata netmonitor -- not getting sending layer geom.
   do quick try at this
 
-* fix Remove( and Find( functions to not be overloaded -- doesn't look too bad.
-
-* program dirty not getting set -- init not recompiling: brad
-
 * dataops: random patterns!
 
-* relnet stat
-
-
+* relnet stat & adaptation of lay act_pct and wtscale.
 
 * create MathFuns library with all kinds of math-related things in it, incl lots of #CAT
 docs..: add all float_RArray funs, for matricies.
