added datalink stuff for specptr's & got rid of gross cutlinks code for specs now they just set the spec to null, and objects will complain on init but that is what you'd expect.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,11 +1,9 @@
 leabra todo list:
 
-* BUTTON_MENUs for changing specs & obj types etc in Netstru objs -- select obj
-  do in its panel
-
-* look for ConnectFromCk -- always necessary?  very expensive.
-
 * replace spec* with smartptr or ref
+
+* BUTTON_MENUs for changing specs & obj types etc in Netstru objs -- select obj
+  do in its panel (was prev in view menu?)
 
 * scan_congroups in netdata netmonitor -- not getting sending layer geom.
   do quick try at this
